{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 736,
  "lineage": "48ca55b6-b41e-11f7-48e0-90db1ce270b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:internet-gateway/igw-01b8c137ac5493e73",
            "id": "igw-01b8c137ac5493e73",
            "owner_id": "026090513364",
            "tags": {
              "Name": "webapp-igw"
            },
            "tags_all": {
              "Name": "webapp-igw"
            },
            "vpc_id": "vpc-044042a94b8a9e2ab"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:loadbalancer/app/webapp-alb/9d51ba1cd7d4f3bc",
            "arn_suffix": "app/webapp-alb/9d51ba1cd7d4f3bc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-alb-845436594.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:026090513364:loadbalancer/app/webapp-alb/9d51ba1cd7d4f3bc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07d32ba9dfcda0ced"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028dba8313f401a90"
              },
              {
                "subnet_id": "subnet-044118c97d77383a7"
              }
            ],
            "subnets": [
              "subnet-028dba8313f401a90",
              "subnet-044118c97d77383a7"
            ],
            "tags": {
              "Name": "webapp-alb"
            },
            "tags_all": {
              "Name": "webapp-alb"
            },
            "vpc_id": "vpc-044042a94b8a9e2ab",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.webapp_pubsub1",
            "aws_subnet.webapp_pubsub2",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:listener/app/webapp-alb/9d51ba1cd7d4f3bc/7fe4b5dd795e1c6c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:targetgroup/webapp-tg/9900966f80b225e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026090513364:listener/app/webapp-alb/9d51ba1cd7d4f3bc/7fe4b5dd795e1c6c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:loadbalancer/app/webapp-alb/9d51ba1cd7d4f3bc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp_alb",
            "aws_lb_target_group.webapp_tg",
            "aws_security_group.web_sg",
            "aws_subnet.webapp_pubsub1",
            "aws_subnet.webapp_pubsub2",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:026090513364:targetgroup/webapp-tg/9900966f80b225e6",
            "arn_suffix": "targetgroup/webapp-tg/9900966f80b225e6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:026090513364:targetgroup/webapp-tg/9900966f80b225e6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-044042a94b8a9e2ab"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp_pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:route-table/rtb-05084212f17da1252",
            "id": "rtb-05084212f17da1252",
            "owner_id": "026090513364",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b8c137ac5493e73",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp_pub-rt"
            },
            "tags_all": {
              "Name": "webapp_pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-044042a94b8a9e2ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webapp-igw",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp_pubrta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc227ec9fabc61b1",
            "route_table_id": "rtb-05084212f17da1252",
            "subnet_id": "subnet-044118c97d77383a7"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-igw",
            "aws_route_table.webapp_pub-rt",
            "aws_subnet.webapp_pubsub1",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp_pubrta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a945fc31101357a6",
            "route_table_id": "rtb-05084212f17da1252",
            "subnet_id": "subnet-028dba8313f401a90"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-igw",
            "aws_route_table.webapp_pub-rt",
            "aws_subnet.webapp_pubsub2",
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:security-group/sg-07d32ba9dfcda0ced",
            "description": "Allow SSH, HTTP, and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d32ba9dfcda0ced",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "026090513364",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044042a94b8a9e2ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp_pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:subnet/subnet-044118c97d77383a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044118c97d77383a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026090513364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp_pubsub1"
            },
            "tags_all": {
              "Name": "webapp_pubsub1"
            },
            "vpc_id": "vpc-044042a94b8a9e2ab"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp_pubsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:subnet/subnet-028dba8313f401a90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028dba8313f401a90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026090513364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp_pubsub2"
            },
            "tags_all": {
              "Name": "webapp_pubsub2"
            },
            "vpc_id": "vpc-044042a94b8a9e2ab"
          },
          "dependencies": [
            "aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026090513364:vpc/vpc-044042a94b8a9e2ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08cf097a8d58001bb",
            "default_route_table_id": "rtb-08f850b293c9746e7",
            "default_security_group_id": "sg-05b88a0a274aa6960",
            "dhcp_options_id": "dopt-0f90ffc28671bfa0e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044042a94b8a9e2ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f850b293c9746e7",
            "owner_id": "026090513364",
            "tags": {
              "Name": "webapp"
            },
            "tags_all": {
              "Name": "webapp"
            }
          }
        }
      ]
    }
  ]
}